[package]
name = "rust_gifflooding"
version = "0.1.0"
authors = ["Niklas Sill <doghoc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random_color = "0.6.1"
time = "0.1.12"
regex = "0.1.41"
rand = "0.8.4"